# volemachine_simulator

./: ALU.cpp  ALU.h  CMakeLists.txt  CPU.cpp  CPU.h  CU.cpp  CU.h  Machine.cpp  Machine.h  Memory.cpp  Memory.h  Register.cpp  Register.h  Test.cpp  Test.h  arbitarylab.cpp  main.cpp  test_running.cpp
